# pltpublish

./: LICENSE  README.md  mypy.ini  pyproject.toml
examples/: sinusoid.py
pltpublish/: __init__.py  pltpublish.py
