[tool.poetry]
name = "pltpublish"
version = "1.0.3"
description = "Utility package that takes care of configuring Matplotlib for publication-ready figures!"
authors = ["Théo Matricon <theomatricon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Theomat/pltpublish"

[tool.poetry.dependencies]
python = ">=3.7.1"
matplotlib = ">=3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"